@@ -93,7 +93,7 @@ Inline and included scripts are supported, as are the following DOM elements:
 <ul>
 <li>open  - opens a document for writing, optionally specifying a MIME type</li>
 <li>close - closes the open document and replaces its contents with the written text</li>
-<li>getElementByID - returns the element in the document with the specified ID</li>
+<li>getElementById - returns the element in the document with the specified ID</li>
 <li>write - writes a string to the contents of the current open document</li>
 <li>writeln - writes a line with carriage-return to the contents of the current open document</li>
 </ul>
